--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <h1>Bonjour world</h1>
+
+    <div class="nav">
+      <ul>
+        <li>Home</li>
+      </ul>
+    </div>
 
     <script src="js/main.js" type="module"></script>
   </body>
